--- a/index.html
+++ b/index.html
@@ -11,7 +11,31 @@
 </head>
 
 <body>
-    
+    <header id="header">
+        <div class="container bordo-container">
+            <nav class="navbar ">
+                <div class="container-fluid px-lg-5">
+                    <span class="navbar-brand mb-0 h1">Navbar</span>
+
+                    <div class="d-md-none">MENU'</div>
+                    <div class="d-none d-md-block">
+                        <ul class="nav justify-content-end">
+                            <li class="nav-item">
+                              <a class="nav-link" aria-current="page" href="#">Active</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Link</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Link</a>
+                            </li>
+                          </ul>
+                    </div>
+                </div>
+            </nav>
+
+        </div>
+    </header>
 
 </body>
 
