feat section jumbotron

--- a/index.html
+++ b/index.html
@@ -13,29 +13,49 @@
 <body>
     <header id="header">
         <div class="container bordo-container">
-            <nav class="navbar ">
+            <nav class="navbar">
                 <div class="container-fluid px-lg-5">
-                    <span class="navbar-brand mb-0 h1">Navbar</span>
+                    <span class="navbar-brand mb-0 h2">Navbar</span>
 
                     <div class="d-md-none">MENU'</div>
                     <div class="d-none d-md-block">
                         <ul class="nav justify-content-end">
                             <li class="nav-item">
-                              <a class="nav-link" aria-current="page" href="#">Active</a>
+                                <a class="nav-link" aria-current="page" href="#">Active</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link" href="#">Link</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link" href="#">Link</a>
                             </li>
-                          </ul>
+                        </ul>
                     </div>
                 </div>
             </nav>
 
         </div>
     </header>
+
+    <main>
+
+
+        <section id="jumbotron">
+                <div class="container d-flex flex-column align-items-center bordo-container">
+                    <div> img</div>
+                    <h1> title</h1>
+                    <div> star</div>
+                    <div class="d-flex flex-row">
+                        <h3 class="px-1">lorem</h3>
+                        <h3 class="px-1">lorem</h3>
+                        <h3 class="px-1">lorem</h3>
+                    </div>
+                </div>
+        </section>
+        <section id="portfolio">
+            <div></div>
+        </section>
+    </main>
 
 </body>
 
