--- a/index.html
+++ b/index.html
@@ -39,21 +39,74 @@
 
     <main>
 
+        <!--JUMBOTRON-->
 
         <section id="jumbotron">
-                <div class="container d-flex flex-column align-items-center bordo-container">
-                    <div> img</div>
-                    <h1> title</h1>
-                    <div> star</div>
-                    <div class="d-flex flex-row">
-                        <h3 class="px-1">lorem</h3>
-                        <h3 class="px-1">lorem</h3>
-                        <h3 class="px-1">lorem</h3>
+            <div class="container d-flex flex-column align-items-center bordo-container">
+                <div> img</div>
+                <h1> title</h1>
+                <div class="star d-flex flex-row">
+                    <div>---</div>
+                    <div>star</div>
+                    <div>---</div>
+                </div>
+                <div class="d-flex flex-row">
+                    <h3 class="px-1">lorem</h3>
+                    <h3 class="px-1">lorem</h3>
+                    <h3 class="px-1">lorem</h3>
+                </div>
+            </div>
+        </section>
+
+
+        <!--PORTOFOLI0-->
+
+
+
+
+        <section id="portfolio">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 text-center bordo-col">
+                        <div>title</div>
+                        <div class="star d-flex flex-row justify-content-center">
+                            <div>---</div>
+                            <div>star</div>
+                            <div>---</div>
+                        </div>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4 bordo-col">
+                        <div class="card">img</div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 bordo-col">
+                        <div class="card">img</div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 bordo-col">
+                        <div class="card">img</div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 bordo-col">
+                        <div class="card">img</div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 bordo-col">
+                        <div class="card">img</div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-4 bordo-col">
+                        <div class="card">img</div>
+                    </div>
+                </div>
+            </div>
+
         </section>
-        <section id="portfolio">
-            <div></div>
+
+        <!--ABOUT-->
+
+        <section id="about">
+
+
+
         </section>
     </main>
 
