feat section-about

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <header id="header">
         <div class="container bordo-container">
             <nav class="navbar">
-                <div class="container-fluid px-lg-5">
-                    <span class="navbar-brand mb-0 h2">Navbar</span>
+                <div class="container-fluid px-lg-4">
+                    <h3 class="navbar-brand mb-0 h2">Navbar</h3>
 
                     <div class="d-md-none">MENU'</div>
                     <div class="d-none d-md-block">
@@ -42,7 +42,7 @@
         <!--JUMBOTRON-->
 
         <section id="jumbotron">
-            <div class="container d-flex flex-column align-items-center bordo-container">
+            <div class="container d-flex flex-column align-items-center px-5 bordo-container">
                 <div> img</div>
                 <h1> title</h1>
                 <div class="star d-flex flex-row">
@@ -68,7 +68,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center bordo-col">
-                        <div>title</div>
+                        <H2>title</H2>
                         <div class="star d-flex flex-row justify-content-center">
                             <div>---</div>
                             <div>star</div>
@@ -104,9 +104,54 @@
         <!--ABOUT-->
 
         <section id="about">
+            <div class="container">
+                <DIV class="row">
+                    <div class="col-12">
 
-
-
+                        <h2 class="text-center">TITLE</h2>
+                        <div class="star d-flex flex-row justify-content-center">
+                            <div>---</div>
+                            <div>star</div>
+                            <div>---</div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eaque eius nostrum
+                            praesentium illum velit nesciunt possimus non dolor totam, labore adipisci maxime nisi
+                            temporibus in quidem ea ipsam nobis!
+                            Ipsam eum modi totam quia iusto sunt sed maiores laborum in, nihil nesciunt mollitia sit
+                            veniam ex! Voluptate reprehenderit aliquam perspiciatis, recusandae error omnis, dolor,
+                            aperiam eos cumque beatae aut?
+                            Facere nam, quae consequatur fugit, possimus molestias nulla unde error et non sapiente
+                            tempore magnam voluptas iure in! Delectus soluta voluptatem illo maxime porro fugit libero
+                            commodi necessitatibus sequi aspernatur.
+                            Incidunt, iure nostrum excepturi beatae, sequi voluptates repellendus vero repellat
+                            voluptate suscipit fuga eum. Facere repellat quia eos facilis! Ipsum illo, quo odit
+                            praesentium esse a quis maiores in ipsam.
+                            Itaque vel blanditiis optio consequuntur minima natus autem similique soluta iusto, expedita
+                            dolor odio nisi aspernatur. Veritatis, quo possimus asperiores officiis suscipit quod
+                            commodi doloremque vel, quisquam amet excepturi aliquid!</p>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum sequi vero sint magni hic
+                            nostrum cumque atque qui dolores maxime sunt eum placeat, architecto nam minima velit quidem
+                            temporibus assumenda.
+                            Hic sequi ut tenetur fuga itaque, libero vero facere quidem at repudiandae sint dolorem quos
+                            quia laboriosam explicabo voluptate ab molestiae voluptatibus nemo, magni maxime, cum
+                            inventore eligendi architecto. Laudantium.
+                            Voluptate provident aut consequuntur? Labore architecto, quia facere esse excepturi
+                            repellendus aliquid dolor atque, inventore, culpa ipsum eveniet? Laudantium magni, inventore
+                            atque architecto vel ea expedita a voluptatum corrupti officia?
+                            Obcaecati facilis dolorum velit possimus aperiam ipsa pariatur vitae fugiat, ullam eius non
+                            laudantium earum cumque aut debitis, nihil nam error illum ea autem a quis temporibus.
+                            Blanditiis, a! Nostrum?
+                            Officiis tenetur libero sapiente. Libero sit ducimus modi facere ab quo quisquam! Quos
+                            eligendi ea placeat perferendis enim fugit libero deleniti ipsum expedita illum, id, dolore
+                            nam, aliquam maxime suscipit!</p>
+                    </div>
+                    <div class="col-12"><button>DOWNLOAD</button></div>
+                </div>
+            </DIV>
         </section>
     </main>
 
