feat section-contact

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         <!--ABOUT-->
 
         <section id="about">
-            <div class="container">
+            <div class="container px-5">
                 <DIV class="row">
                     <div class="col-12">
 
@@ -149,9 +149,52 @@
                             eligendi ea placeat perferendis enim fugit libero deleniti ipsum expedita illum, id, dolore
                             nam, aliquam maxime suscipit!</p>
                     </div>
-                    <div class="col-12"><button>DOWNLOAD</button></div>
+                    <div class="col-12 text-center"><button>DOWNLOAD</button></div>
                 </div>
             </DIV>
+        </section>
+
+        <!--CONTACT-->
+
+        <section id="contact">
+            <div class="container px-5 bordo-container">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-center">title</h2>
+                        <div class="star d-flex flex-row justify-content-center">
+                            <div>---</div>
+                            <div>star</div>
+                            <div>---</div>
+                        </div>
+
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" placeholder="Name" aria-label="Username"
+                                aria-describedby="basic-addon1">
+                        </div>
+
+                        <div class="input-group mb-3">
+
+                            <input type="text" class="form-control" placeholder="Email Address"
+                                aria-label="Recipient's username" aria-describedby="basic-addon1">
+                        </div>
+
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" placeholder="Phone Number" aria-label="Phone number"
+                                aria-describedby="basic-addon1">
+                        </div>
+
+                        <div>Message</div>
+                        <div class="input-group mb-3">
+                            <textarea class="form-control" aria-label="Messsage"></textarea>
+                        </div>
+
+                        <input type="checkbox" class="btn-check" id="btn-check-2" checked autocomplete="off">
+                        <label class="btn btn-primary" for="btn-check-2">Send</label>
+
+                    </div>
+                </div>
+
+            </div>
         </section>
     </main>
 
