feat section-location

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container bordo-container">
             <nav class="navbar">
                 <div class="container-fluid px-lg-4">
-                    <h3 class="navbar-brand mb-0 h2">Navbar</h3>
+                    <h3 class="navbar-brand mb-0 h2 text-uppercase">Navbar</h3>
 
                     <div class="d-md-none">MENU'</div>
                     <div class="d-none d-md-block">
@@ -44,7 +44,7 @@
         <section id="jumbotron">
             <div class="container d-flex flex-column align-items-center px-5 bordo-container">
                 <div> img</div>
-                <h1> title</h1>
+                <h1 class="text-uppercase"> title</h1>
                 <div class="star d-flex flex-row">
                     <div>---</div>
                     <div>star</div>
@@ -68,7 +68,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text-center bordo-col">
-                        <H2>title</H2>
+                        <H2 class="text-uppercase">title</H2>
                         <div class="star d-flex flex-row justify-content-center">
                             <div>---</div>
                             <div>star</div>
@@ -108,7 +108,7 @@
                 <DIV class="row">
                     <div class="col-12">
 
-                        <h2 class="text-center">TITLE</h2>
+                        <h2 class="text-center text-uppercase">TITLE</h2>
                         <div class="star d-flex flex-row justify-content-center">
                             <div>---</div>
                             <div>star</div>
@@ -160,7 +160,7 @@
             <div class="container px-5 bordo-container">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="text-center">title</h2>
+                        <h2 class="text-center text-uppercase">title</h2>
                         <div class="star d-flex flex-row justify-content-center">
                             <div>---</div>
                             <div>star</div>
@@ -183,9 +183,8 @@
                                 aria-describedby="basic-addon1">
                         </div>
 
-                        <div>Message</div>
                         <div class="input-group mb-3">
-                            <textarea class="form-control" aria-label="Messsage"></textarea>
+                            <textarea class="form-control" placeholder="Message" aria-label="Messsage"></textarea>
                         </div>
 
                         <input type="checkbox" class="btn-check" id="btn-check-2" checked autocomplete="off">
@@ -194,6 +193,33 @@
                     </div>
                 </div>
 
+            </div>
+        </section>
+
+        <!--LOCATION-->
+
+        <section id="location">
+            <div class="container px-4">
+                <div class="row text-center">
+                    <div class="col-12 col-md-4">
+                        <h3 class="text-uppercase">title</h3>
+                        <address>
+
+                            Visit us at:
+                            Example.com
+                            Box 564, Disneyland
+                            USA
+                        </address>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <h3 class="text-uppercase">lorem</h3>
+                        <div>font awesome</div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <h3 class="text-uppercase">lorem</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, inventore?</p>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
