--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -42,7 +45,7 @@
         <!--JUMBOTRON-->
 
         <section id="jumbotron">
-            <div class="container d-flex flex-column align-items-center px-5 bordo-container">
+            <div class="container d-flex flex-column align-items-center p-5 bordo-container">
                 <div> img</div>
                 <h1 class="text-uppercase"> title</h1>
                 <div class="star d-flex flex-row">
@@ -65,7 +68,7 @@
 
 
         <section id="portfolio">
-            <div class="container">
+            <div class="container p-4">
                 <div class="row">
                     <div class="col-12 text-center bordo-col">
                         <H2 class="text-uppercase">title</H2>
@@ -104,7 +107,7 @@
         <!--ABOUT-->
 
         <section id="about">
-            <div class="container px-5">
+            <div class="container p-5">
                 <DIV class="row">
                     <div class="col-12">
 
@@ -157,7 +160,7 @@
         <!--CONTACT-->
 
         <section id="contact">
-            <div class="container px-5 bordo-container">
+            <div class="container p-5 bordo-container">
                 <div class="row">
                     <div class="col-12">
                         <h2 class="text-center text-uppercase">title</h2>
@@ -199,9 +202,9 @@
         <!--LOCATION-->
 
         <section id="location">
-            <div class="container px-4">
-                <div class="row text-center">
-                    <div class="col-12 col-md-4">
+            <div class="container p-4 bordo-container">
+                <div class="row  text-center">
+                    <div class="col-12 col-md-4 bordo-col">
                         <h3 class="text-uppercase">title</h3>
                         <address>
 
@@ -211,11 +214,11 @@
                             USA
                         </address>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 bordo-col">
                         <h3 class="text-uppercase">lorem</h3>
                         <div>font awesome</div>
                     </div>
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 bordo-col">
                         <h3 class="text-uppercase">lorem</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, inventore?</p>
                     </div>
@@ -224,6 +227,14 @@
         </section>
     </main>
 
+    <!--FOOTER-->
+
+    <footer id="footer">
+        <div class="container d-flex justify-content-center align-items-center">
+
+            <div class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+        </div>
+    </footer>
 </body>
 
 </html>
