--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                             <div class="line"></div>
                         </div>
                     </div>
-                    <div class="col-10 col-md-5">
+                    <div class="col-8 col-md-4">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eaque eius nostrum
                             praesentium illum velit nesciunt possimus non dolor totam, labore adipisci maxime nisi
                             temporibus in quidem ea ipsam nobis!
@@ -549,7 +549,7 @@
                             dolor odio nisi aspernatur. Veritatis, quo possimus asperiores officiis suscipit quod
                             commodi doloremque vel, quisquam amet excepturi aliquid!</p>
                     </div>
-                    <div class="col-10 col-md-5">
+                    <div class="col-8 col-md-4">
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum sequi vero sint magni hic
                             nostrum cumque atque qui dolores maxime sunt eum placeat, architecto nam minima velit quidem
                             temporibus assumenda.
@@ -578,36 +578,35 @@
         <section id="contact">
             <div class="container py-5 bordo-container">
                 <div class="row justify-content-center">
-                    <div class="col-10">
-                        <h2 class="text-center text-uppercase">title</h2>
-                        <div class="star d-flex flex-row justify-content-center">
-                            <div>---</div>
-                            <div>star</div>
-                            <div>---</div>
+                    <div class="col-8 col-md-10 col-lg-8">
+                        <h2 class="text-center text-uppercase">contact me</h2>
+                        <div class="star py-4 d-flex flex-row align-items-center justify-content-center">
+                            <div class="line"></div>
+                            <i class="fa-solid fa-star px-1"></i>
+                            <div class="line"></div>
                         </div>
-                        <form action="">
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" placeholder="Name" aria-label="Username"
-                                    aria-describedby="basic-addon1">
-                            </div>
+                        <form action="http://learning.tizianonicolai.com/request-catcher/" method="get">
+                            <div class="form-floating mb-3">
+                                <input type="Name" class="form-control" id="floatingInput" placeholder="Name">
+                                <label for="floatingInput">Name</label>
+                              </div>
 
-                            <div class="input-group mb-3">
+                              <div class="form-floating mb-3">
+                                <input type="email" class="form-control" id="floatingInput" placeholder="Email">
+                                <label for="floatingInput">Email address</label>
+                              </div>
 
-                                <input type="text" class="form-control" placeholder="Email Address"
-                                    aria-label="Recipient's username" aria-describedby="basic-addon1">
-                            </div>
+                              <div class="form-floating mb-3">
+                                <input type="tel" class="form-control" id="floatingInput" placeholder="Phone number">
+                                <label for="floatingInput">Phone number</label>
+                              </div>
 
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" placeholder="Phone Number"
-                                    aria-label="Phone number" aria-describedby="basic-addon1">
-                            </div>
+                              <div class="form-floating pb-2">
+                                <textarea class="form-control" placeholder="Message" id="floatingTextarea2" style="height: 200px"></textarea>
+                                <label for="floatingTextarea2">Message</label>
+                              </div>
 
-                            <div class="input-group mb-3">
-                                <textarea class="form-control" placeholder="Message" aria-label="Messsage"></textarea>
-                            </div>
-
-                            <input type="checkbox" class="btn-check" id="btn-check-2" checked autocomplete="off">
-                            <label class="btn btn-primary" for="btn-check-2">Send</label>
+                              <button class="btn btn-primary" type="submit">Send</button>
                         </form>
                     </div>
                 </div>
