--- a/index.html
+++ b/index.html
@@ -567,7 +567,8 @@
                             nam, aliquam maxime suscipit!</p>
                     </div>
                     <div class="col-12 pt-5 text-center">
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-download"></i> Download</button>
+                        <button type="button" class="btn btn-success"><i class="fa-solid fa-download"></i>
+                            Download</button>
                     </div>
                 </div>
             </DIV>
@@ -576,9 +577,9 @@
         <!--CONTACT-->
 
         <section id="contact">
-            <div class="container py-5 bordo-container">
+            <div class="container py-5">
                 <div class="row justify-content-center">
-                    <div class="col-8 col-md-10 col-lg-8">
+                    <div class="col-8">
                         <h2 class="text-center text-uppercase">contact me</h2>
                         <div class="star py-4 d-flex flex-row align-items-center justify-content-center">
                             <div class="line"></div>
@@ -587,26 +588,27 @@
                         </div>
                         <form action="http://learning.tizianonicolai.com/request-catcher/" method="get">
                             <div class="form-floating mb-3">
-                                <input type="Name" class="form-control" id="floatingInput" placeholder="Name">
-                                <label for="floatingInput">Name</label>
-                              </div>
+                                <input type="Name" class="form-control" id="floatingName" placeholder="Name">
+                                <label for="floatingName">Name</label>
+                            </div>
 
-                              <div class="form-floating mb-3">
-                                <input type="email" class="form-control" id="floatingInput" placeholder="Email">
-                                <label for="floatingInput">Email address</label>
-                              </div>
+                            <div class="form-floating mb-3">
+                                <input type="email" class="form-control" id="floatingEmail" placeholder="Email">
+                                <label for="floatingEmail">Email address</label>
+                            </div>
 
-                              <div class="form-floating mb-3">
-                                <input type="tel" class="form-control" id="floatingInput" placeholder="Phone number">
-                                <label for="floatingInput">Phone number</label>
-                              </div>
+                            <div class="form-floating mb-3">
+                                <input type="text" class="form-control" id="floatingTel" placeholder="Phone number">
+                                <label for="floatingTel">Phone number</label>
+                            </div>
 
-                              <div class="form-floating pb-2">
-                                <textarea class="form-control" placeholder="Message" id="floatingTextarea2" style="height: 200px"></textarea>
+                            <div class="form-floating pb-2">
+                                <textarea class="form-control" placeholder="Message" id="floatingTextarea2"
+                                    style="height: 200px"></textarea>
                                 <label for="floatingTextarea2">Message</label>
-                              </div>
+                            </div>
 
-                              <button class="btn btn-primary" type="submit">Send</button>
+                            <button type="button" class="btn btn-primary" type="submit">Send</button>
                         </form>
                     </div>
                 </div>
@@ -617,25 +619,28 @@
         <!--LOCATION-->
 
         <section id="location">
-            <div class="container p-4 bordo-container">
+            <div class="container-fluid py-4">
                 <div class="row  text-center">
-                    <div class="col-12 col-md-4 bordo-col">
-                        <h3 class="text-uppercase">title</h3>
+                    <div class="col-12 col-md-4 py-4">
+                        <h4 class="text-uppercase">location</h4>
                         <address>
-
-                            Visit us at:
-                            Example.com
-                            Box 564, Disneyland
-                            USA
+                            2215
+                            John Danuiel Drive Clark, MO 54243
                         </address>
                     </div>
-                    <div class="col-12 col-md-4 bordo-col">
-                        <h3 class="text-uppercase">lorem</h3>
-                        <div>font awesome</div>
+                    <div class="col-12 col-md-4 py-4">
+                        <h4 class="text-uppercase">around the web</h4>
+                        <div class="circle">
+                            <i class="fa-brands mx-1 fa-facebook-f"></i>
+                            <i class="fa-brands mx-1  fa-google-plus-g"></i>
+                            <i class="fa-brands mx-1  fa-twitter"></i>
+                            <i class="fa-brands mx-1  fa-linkedin-in"></i>
+                        </div>
                     </div>
-                    <div class="col-12 col-md-4 bordo-col">
-                        <h3 class="text-uppercase">lorem</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, inventore?</p>
+                    <div class="col-12 col-md-4 py-4">
+                        <h4 class="text-uppercase">about freelancer</h4>
+                        <p>Freelance is a free to use, open source Bootstrap theme created by <span>Start
+                                Bootstrap</span>.</p>
                     </div>
                 </div>
             </div>
