feat footer fix about

--- a/index.html
+++ b/index.html
@@ -533,38 +533,10 @@
                         </div>
                     </div>
                     <div class="col-8 col-md-4">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore eaque eius nostrum
-                            praesentium illum velit nesciunt possimus non dolor totam, labore adipisci maxime nisi
-                            temporibus in quidem ea ipsam nobis!
-                            Ipsam eum modi totam quia iusto sunt sed maiores laborum in, nihil nesciunt mollitia sit
-                            veniam ex! Voluptate reprehenderit aliquam perspiciatis, recusandae error omnis, dolor,
-                            aperiam eos cumque beatae aut?
-                            Facere nam, quae consequatur fugit, possimus molestias nulla unde error et non sapiente
-                            tempore magnam voluptas iure in! Delectus soluta voluptatem illo maxime porro fugit libero
-                            commodi necessitatibus sequi aspernatur.
-                            Incidunt, iure nostrum excepturi beatae, sequi voluptates repellendus vero repellat
-                            voluptate suscipit fuga eum. Facere repellat quia eos facilis! Ipsum illo, quo odit
-                            praesentium esse a quis maiores in ipsam.
-                            Itaque vel blanditiis optio consequuntur minima natus autem similique soluta iusto, expedita
-                            dolor odio nisi aspernatur. Veritatis, quo possimus asperiores officiis suscipit quod
-                            commodi doloremque vel, quisquam amet excepturi aliquid!</p>
+                        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScrips well as optional LESS Stylesheets foe easy customization.</p>
                     </div>
                     <div class="col-8 col-md-4">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum sequi vero sint magni hic
-                            nostrum cumque atque qui dolores maxime sunt eum placeat, architecto nam minima velit quidem
-                            temporibus assumenda.
-                            Hic sequi ut tenetur fuga itaque, libero vero facere quidem at repudiandae sint dolorem quos
-                            quia laboriosam explicabo voluptate ab molestiae voluptatibus nemo, magni maxime, cum
-                            inventore eligendi architecto. Laudantium.
-                            Voluptate provident aut consequuntur? Labore architecto, quia facere esse excepturi
-                            repellendus aliquid dolor atque, inventore, culpa ipsum eveniet? Laudantium magni, inventore
-                            atque architecto vel ea expedita a voluptatum corrupti officia?
-                            Obcaecati facilis dolorum velit possimus aperiam ipsa pariatur vitae fugiat, ullam eius non
-                            laudantium earum cumque aut debitis, nihil nam error illum ea autem a quis temporibus.
-                            Blanditiis, a! Nostrum?
-                            Officiis tenetur libero sapiente. Libero sit ducimus modi facere ab quo quisquam! Quos
-                            eligendi ea placeat perferendis enim fugit libero deleniti ipsum expedita illum, id, dolore
-                            nam, aliquam maxime suscipit!</p>
+                        <p>Wheter you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
                     </div>
                     <div class="col-12 pt-5 text-center">
                         <button type="button" class="btn btn-success"><i class="fa-solid fa-download"></i>
@@ -609,6 +581,7 @@
                             </div>
 
                             <button type="button" class="btn btn-primary" type="submit">Send</button>
+
                         </form>
                     </div>
                 </div>
@@ -652,7 +625,8 @@
     <footer id="footer">
         <div class="container d-flex justify-content-center align-items-center">
 
-            <div class="text-center">Lorem ipsum dolor sit amet consectetur adipisicing.</div>
+            <div class="text-center">Copyright <i class="fa-regular fa-copyright"></i> Your Website 2019</div>
+
         </div>
     </footer>
 </body>
